CMinusMinus/src/parser/CmmParser.java
// Generated from src/parser/Cmm.g4 by ANTLR 4.7
package parser;

import ast.*;
import ast.definitions.*;
import ast.expresions.*;
import ast.statements.*;
import ast.types.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CmmParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		ID=39, CHAR_CONSTANT=40, INT_CONSTANT=41, REAL_CONSTANT=42, LINE_COMMENT=43, 
		MULTI_LINE_COMMENT=44, WHITE_SPACES=45;
	public static final int
		RULE_program = 0, RULE_definitions = 1, RULE_funcDef = 2, RULE_mainDef = 3, 
		RULE_params = 4, RULE_varDefs = 5, RULE_fieldDefs = 6, RULE_ids = 7, RULE_type = 8, 
		RULE_statments = 9, RULE_statment = 10, RULE_assigment = 11, RULE_ifStat = 12, 
		RULE_block = 13, RULE_args = 14, RULE_expr = 15;
	public static final String[] ruleNames = {
		"program", "definitions", "funcDef", "mainDef", "params", "varDefs", "fieldDefs", 
		"ids", "type", "statments", "statment", "assigment", "ifStat", "block", 
		"args", "expr"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'('", "')'", "'{'", "'}'", "'void'", "'main'", "','", "';'", "'int'", 
		"'double'", "'char'", "'['", "']'", "'struct'", "'*'", "'while'", "'return'", 
		"'write'", "'read'", "'for'", "'='", "'if'", "'else'", "'.'", "'&'", "'/'", 
		"'%'", "'+'", "'-'", "'!'", "'=='", "'!='", "'<='", "'>='", "'<'", "'>'", 
		"'&&'", "'||'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, "ID", "CHAR_CONSTANT", "INT_CONSTANT", "REAL_CONSTANT", 
		"LINE_COMMENT", "MULTI_LINE_COMMENT", "WHITE_SPACES"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Cmm.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CmmParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public Program ast;
		public DefinitionsContext definitions;
		public DefinitionsContext definitions() {
			return getRuleContext(DefinitionsContext.class,0);
		}
		public TerminalNode EOF() { return getToken(CmmParser.EOF, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(32);
			((ProgramContext)_localctx).definitions = definitions();
			 ((ProgramContext)_localctx).ast =  new Program(((ProgramContext)_localctx).definitions.ast); 
			setState(34);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinitionsContext extends ParserRuleContext {
		public List<Definition> ast = new ArrayList<Definition>();
		public VarDefsContext varDefs;
		public FuncDefContext funcDef;
		public MainDefContext mainDef;
		public MainDefContext mainDef() {
			return getRuleContext(MainDefContext.class,0);
		}
		public List<VarDefsContext> varDefs() {
			return getRuleContexts(VarDefsContext.class);
		}
		public VarDefsContext varDefs(int i) {
			return getRuleContext(VarDefsContext.class,i);
		}
		public List<FuncDefContext> funcDef() {
			return getRuleContexts(FuncDefContext.class);
		}
		public FuncDefContext funcDef(int i) {
			return getRuleContext(FuncDefContext.class,i);
		}
		public DefinitionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definitions; }
	}

	public final DefinitionsContext definitions() throws RecognitionException {
		DefinitionsContext _localctx = new DefinitionsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_definitions);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(42);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
					case 1:
						{
						setState(36);
						((DefinitionsContext)_localctx).varDefs = varDefs();
						 _localctx.ast.addAll(((DefinitionsContext)_localctx).varDefs.ast); 
						}
						break;
					case 2:
						{
						setState(39);
						((DefinitionsContext)_localctx).funcDef = funcDef();
						 _localctx.ast.add(((DefinitionsContext)_localctx).funcDef.ast); 
						}
						break;
					}
					} 
				}
				setState(46);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(47);
			((DefinitionsContext)_localctx).mainDef = mainDef();
			 _localctx.ast.add(((DefinitionsContext)_localctx).mainDef.ast); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncDefContext extends ParserRuleContext {
		public FunctionDefinition ast;
		public TypeContext type;
		public Token ID;
		public ParamsContext params;
		public StatmentsContext statments;
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(CmmParser.ID, 0); }
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public StatmentsContext statments() {
			return getRuleContext(StatmentsContext.class,0);
		}
		public FuncDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcDef; }
	}

	public final FuncDefContext funcDef() throws RecognitionException {
		FuncDefContext _localctx = new FuncDefContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_funcDef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			((FuncDefContext)_localctx).type = type(0);
			setState(51);
			((FuncDefContext)_localctx).ID = match(ID);
			setState(52);
			match(T__0);
			setState(53);
			((FuncDefContext)_localctx).params = params();
			setState(54);
			match(T__1);
			setState(55);
			match(T__2);
			setState(56);
			((FuncDefContext)_localctx).statments = statments();
			setState(57);
			match(T__3);
			 ((FuncDefContext)_localctx).ast =  new FunctionDefinition((((FuncDefContext)_localctx).ID!=null?((FuncDefContext)_localctx).ID.getText():null),new FunctionType(((FuncDefContext)_localctx).type.ast, ((FuncDefContext)_localctx).params.ast),((FuncDefContext)_localctx).statments.ast); _localctx.ast.setLine((((FuncDefContext)_localctx).ID!=null?((FuncDefContext)_localctx).ID.getLine():0)); _localctx.ast.setColumn(((FuncDefContext)_localctx).ID.getCharPositionInLine() + 1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainDefContext extends ParserRuleContext {
		public FunctionDefinition ast;
		public Token t;
		public StatmentsContext statments;
		public StatmentsContext statments() {
			return getRuleContext(StatmentsContext.class,0);
		}
		public MainDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mainDef; }
	}

	public final MainDefContext mainDef() throws RecognitionException {
		MainDefContext _localctx = new MainDefContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_mainDef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			match(T__4);
			setState(61);
			((MainDefContext)_localctx).t = match(T__5);
			setState(62);
			match(T__0);
			setState(63);
			match(T__1);
			setState(64);
			match(T__2);
			setState(65);
			((MainDefContext)_localctx).statments = statments();
			setState(66);
			match(T__3);
			 ((MainDefContext)_localctx).ast =  new FunctionDefinition("main",new FunctionType(new VoidType()),((MainDefContext)_localctx).statments.ast); _localctx.ast.setLine((((MainDefContext)_localctx).t!=null?((MainDefContext)_localctx).t.getLine():0)); _localctx.ast.setColumn(((MainDefContext)_localctx).t.getCharPositionInLine() + 1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamsContext extends ParserRuleContext {
		public List<VariableDeclaration> ast = new ArrayList<VariableDeclaration>();
		public TypeContext t1;
		public TypeContext type;
		public Token id1;
		public TypeContext t2;
		public Token id2;
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public List<TerminalNode> ID() { return getTokens(CmmParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(CmmParser.ID, i);
		}
		public ParamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_params; }
	}

	public final ParamsContext params() throws RecognitionException {
		ParamsContext _localctx = new ParamsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_params);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__13))) != 0)) {
				{
				setState(69);
				((ParamsContext)_localctx).t1 = ((ParamsContext)_localctx).type = type(0);
				setState(70);
				((ParamsContext)_localctx).id1 = match(ID);
				 _localctx.ast.add(new VariableDeclaration(((ParamsContext)_localctx).type.ast, (((ParamsContext)_localctx).id1!=null?((ParamsContext)_localctx).id1.getText():null))); 
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__6) {
					{
					{
					setState(72);
					match(T__6);
					setState(73);
					((ParamsContext)_localctx).t2 = ((ParamsContext)_localctx).type = type(0);
					setState(74);
					((ParamsContext)_localctx).id2 = match(ID);
					 _localctx.ast.add(new VariableDeclaration(((ParamsContext)_localctx).type.ast, (((ParamsContext)_localctx).id2!=null?((ParamsContext)_localctx).id2.getText():null))); 
					}
					}
					setState(81);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDefsContext extends ParserRuleContext {
		public List<VariableDefinition> ast = new ArrayList<VariableDefinition>();
		public TypeContext type;
		public IdsContext ids;
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public IdsContext ids() {
			return getRuleContext(IdsContext.class,0);
		}
		public VarDefsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDefs; }
	}

	public final VarDefsContext varDefs() throws RecognitionException {
		VarDefsContext _localctx = new VarDefsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_varDefs);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			((VarDefsContext)_localctx).type = type(0);
			setState(85);
			((VarDefsContext)_localctx).ids = ids();
			setState(86);
			match(T__7);
			 
			       		for (String id : ((VarDefsContext)_localctx).ids.ast) {
			       			VariableDefinition vd = new VariableDefinition(((VarDefsContext)_localctx).type.ast, id);
			       			vd.setLine(((VarDefsContext)_localctx).type.ast.getLine());
			       			vd.setColumn(((VarDefsContext)_localctx).type.ast.getColumn());
			       			_localctx.ast.add(vd); 
			       		}
			       
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldDefsContext extends ParserRuleContext {
		public List<VariableDefinition> ast = new ArrayList<VariableDefinition>();
		public TypeContext type;
		public IdsContext ids;
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public List<IdsContext> ids() {
			return getRuleContexts(IdsContext.class);
		}
		public IdsContext ids(int i) {
			return getRuleContext(IdsContext.class,i);
		}
		public FieldDefsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fieldDefs; }
	}

	public final FieldDefsContext fieldDefs() throws RecognitionException {
		FieldDefsContext _localctx = new FieldDefsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_fieldDefs);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__13))) != 0)) {
				{
				{
				setState(89);
				((FieldDefsContext)_localctx).type = type(0);
				setState(90);
				((FieldDefsContext)_localctx).ids = ids();
				setState(91);
				match(T__7);
				 
				       		for (String id : ((FieldDefsContext)_localctx).ids.ast) {
				       			VariableDefinition vd = new VariableDefinition(((FieldDefsContext)_localctx).type.ast, id);
				       			vd.setLine(((FieldDefsContext)_localctx).type.ast.getLine());
				       			vd.setColumn(((FieldDefsContext)_localctx).type.ast.getColumn());
				       			_localctx.ast.add(vd); 
				       		}
				       
				}
				}
				setState(98);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdsContext extends ParserRuleContext {
		public List<String> ast = new ArrayList<String>();
		public Token id1;
		public Token id2;
		public List<TerminalNode> ID() { return getTokens(CmmParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(CmmParser.ID, i);
		}
		public IdsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ids; }
	}

	public final IdsContext ids() throws RecognitionException {
		IdsContext _localctx = new IdsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_ids);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			((IdsContext)_localctx).id1 = match(ID);
			 _localctx.ast.add((((IdsContext)_localctx).id1!=null?((IdsContext)_localctx).id1.getText():null)); 
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__6) {
				{
				{
				setState(101);
				match(T__6);
				setState(102);
				((IdsContext)_localctx).id2 = match(ID);
				 _localctx.ast.add((((IdsContext)_localctx).id2!=null?((IdsContext)_localctx).id2.getText():null)); 
				}
				}
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public Type ast;
		public TypeContext t2;
		public Token t;
		public FieldDefsContext fieldDefs;
		public Token INT_CONSTANT;
		public FieldDefsContext fieldDefs() {
			return getRuleContext(FieldDefsContext.class,0);
		}
		public TerminalNode INT_CONSTANT() { return getToken(CmmParser.INT_CONSTANT, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
	}

	public final TypeContext type() throws RecognitionException {
		return type(0);
	}

	private TypeContext type(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		TypeContext _localctx = new TypeContext(_ctx, _parentState);
		TypeContext _prevctx = _localctx;
		int _startState = 16;
		enterRecursionRule(_localctx, 16, RULE_type, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__4:
				{
				setState(110);
				((TypeContext)_localctx).t = match(T__4);
				 ((TypeContext)_localctx).ast =  new VoidType(); _localctx.ast.setLine((((TypeContext)_localctx).t!=null?((TypeContext)_localctx).t.getLine():0)); _localctx.ast.setColumn(((TypeContext)_localctx).t.getCharPositionInLine() + 1); 
				}
				break;
			case T__8:
				{
				setState(112);
				((TypeContext)_localctx).t = match(T__8);
				 ((TypeContext)_localctx).ast =  new IntegerType(); _localctx.ast.setLine((((TypeContext)_localctx).t!=null?((TypeContext)_localctx).t.getLine():0)); _localctx.ast.setColumn(((TypeContext)_localctx).t.getCharPositionInLine() + 1); 
				}
				break;
			case T__9:
				{
				setState(114);
				((TypeContext)_localctx).t = match(T__9);
				 ((TypeContext)_localctx).ast =  new DoubleType(); _localctx.ast.setLine((((TypeContext)_localctx).t!=null?((TypeContext)_localctx).t.getLine():0)); _localctx.ast.setColumn(((TypeContext)_localctx).t.getCharPositionInLine() + 1); 
				}
				break;
			case T__10:
				{
				setState(116);
				((TypeContext)_localctx).t = match(T__10);
				 ((TypeContext)_localctx).ast =  new CharType(); _localctx.ast.setLine((((TypeContext)_localctx).t!=null?((TypeContext)_localctx).t.getLine():0)); _localctx.ast.setColumn(((TypeContext)_localctx).t.getCharPositionInLine() + 1); 
				}
				break;
			case T__13:
				{
				setState(118);
				((TypeContext)_localctx).t = match(T__13);
				setState(119);
				match(T__2);
				setState(120);
				((TypeContext)_localctx).fieldDefs = fieldDefs();
				setState(121);
				match(T__3);
				 ((TypeContext)_localctx).ast =  new StructType(((TypeContext)_localctx).fieldDefs.ast); _localctx.ast.setLine((((TypeContext)_localctx).t!=null?((TypeContext)_localctx).t.getLine():0)); _localctx.ast.setColumn(((TypeContext)_localctx).t.getCharPositionInLine() + 1); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(136);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(134);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
					case 1:
						{
						_localctx = new TypeContext(_parentctx, _parentState);
						_localctx.t2 = _prevctx;
						_localctx.t2 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_type);
						setState(126);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(127);
